[workspace]
members = ["utilities", "core", "platform", "mosh"]

[package]
name = "termio"
version = "0.0.1"
edition = "2018"

[[bin]]
name = "termio"
path = "src/main.rs"

[dependencies]
utilities = { path = "utilities/" }
core = { path = "core/" }
platform = { path = "platform/" }

gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"] }
log = "0.4"
env_logger = "0.9"
