[workspace]
members = ["libs", "cli", "platform", "mosh", "terminal"]

[package]
name = "termio"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "termio"
path = "src/main.rs"

[dependencies]
libs = { path = "libs/" }
cli = { path = "cli/" }
platform = { path = "platform/" }

gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"] }
log = "0.4"
log4rs = "1.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
glib-build-tools = "0.16.0"