[package]
name = "mosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }

[[bin]]
name = "mosh"
path = "src/main.rs"
aes = "0.8.2"
ctr = "0.9.2"
cipher = { version = "0.4.3", features = ["block-padding"] }
