[package]
name = "mosh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }

aes = "0.8.2"
cipher = { version = "0.4.3", features = ["block-padding"] }
once_cell = "1.16.0"
base64 = "0.13.1"
rand = "0.8.5"
protobuf = "3.2.0"
ssh2 = "0.9.3"
flate2 = { version = "1.0.25", features = ["zlib-ng"] }
log = "0.4"
log4rs = "1.1.1"
local_ipaddress = "0.1.3"
terminal_size = "0.2.3"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
protobuf-codegen = "3.2.0"

[[bin]]
name = "mosh"
path = "src/main.rs"
