[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities/" }
core = { path = "../core/" }

gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"] }
log = "0.4"
