[package]
name = "platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities/" }
kernel = { path = "../kernel/" }

gtk = { version = "0.5.0", package = "gtk4", features = ["v4_6"] }
pangocairo = "0.16.3"
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"