[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }

criterion = "0.4.0"

lazy_static = "1.4.0"
page_size = "0.5.0"
log = "0.4"
libc = "0.2.138"
wchar = "0.11.0"
widestring = "1.0.2"
bitvec = "1.0.1"
regex = "1.7.0"
hex = "0.4.3"
rust-embed = { version = "6.4.2", features = [
    "debug-embed",
    "include-exclude",
] }
